--- a/sls/package.json
+++ b/sls/package.json
@@ -77,8 +77,11 @@
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.2",
     "prettier": "2.2.1",
+    "serverless": "^2.25.1",
+    "serverless-webpack": "^5.3.5",
     "ts-jest": "26.4.0",
     "ts-node": "~9.1.1",
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "~4.0.3"
   }
 }
