--- a/sls/package.json
+++ b/sls/package.json
@@ -41,6 +41,11 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nrwl/angular": "11.2.12",
+    "aws-lambda": "^1.0.6",
+    "aws-serverless-express": "^3.4.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "nestjs-pino": "^1.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
