Added declaration true

--- a/sls/apps/sls-nest/tsconfig.app.json
+++ b/sls/apps/sls-nest/tsconfig.app.json
@@ -5,6 +5,7 @@
     "types": ["node"],
     "emitDecoratorMetadata": true,
     "target": "es2015",
+    "declaration": true,
   },
   "exclude": ["**/*.spec.ts"],
   "include": ["**/*.ts"]
