--- a/sls/apps/sls-nest/tsconfig.spec.json
+++ b/sls/apps/sls-nest/tsconfig.spec.json
@@ -4,6 +4,7 @@
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
     "types": ["jest", "node"],
+    "declaration": true,
   },
   "include": ["**/*.spec.ts", "**/*.d.ts"]
 }
