--- a/sls/package.json
+++ b/sls/package.json
@@ -85,6 +85,7 @@
     "serverless": "^2.25.1",
     "serverless-webpack": "^5.3.5",
     "ts-jest": "26.4.0",
+    "ts-loader": "^8.0.17",
     "ts-node": "~9.1.1",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "~4.0.3"
