--- a/sls/package.json
+++ b/sls/package.json
@@ -83,6 +83,7 @@
     "jest-preset-angular": "8.3.2",
     "prettier": "2.2.1",
     "serverless": "^2.25.1",
+    "serverless-plugin-optimize": "^4.1.4-rc.1",
     "serverless-webpack": "^5.3.5",
     "ts-jest": "26.4.0",
     "ts-loader": "^8.0.17",
